Bug 409216 - Fractional unit conversion produces weird and incorrect results
Summary: Fractional unit conversion produces weird and incorrect results
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kunitconversion
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.59.0
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: John Layt
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2019-06-26 16:39 UTC by Ovidiu-Florin BOGDAN
Modified: 2019-08-01 14:35 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.17.0
Sentry Crash Report:


Attachments
Convert inch fractions to metric (9.04 KB, image/png)
2019-06-26 16:39 UTC, Ovidiu-Florin BOGDAN
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ovidiu-Florin BOGDAN 2019-06-26 16:39:40 UTC
Created attachment 121172 [details]
Convert inch fractions to metric

SUMMARY
Typing a fraction unit (common in the imperial system) does not properly convert to metric.
See attached screenshot.

STEPS TO REPRODUCE
1. Open Krunner
2. Type 3/16"

OBSERVED RESULT
Conversion shown is 7,381889763779528 / m

EXPECTED RESULT
Conversion should be: 4,7625mm

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora KDE 29
(available in About System)
KDE Plasma Version: 5.14.5
KDE Frameworks Version: 5.58.0
Qt Version: 5.11.3
Comment 1 Nate Graham 2019-06-28 20:09:50 UTC
Heh, that's pretty funny.
Comment 2 Kai Uwe Broulik 2019-08-01 14:35:32 UTC
Git commit 6f1cadb5882c25fdcb2543f2a031224e3948daea by Kai Uwe Broulik.
Committed on 01/08/2019 at 14:35.
Pushed by broulik into branch 'master'.

[Converter Runner] Support fractional units
FIXED-IN: 5.17.0

CHANGELOG: Converter runner can now convert fractional units, such as 3/8"

Differential Revision: https://phabricator.kde.org/D22869

M  +32   -5    runners/converter/converterrunner.cpp

https://commits.kde.org/kdeplasma-addons/6f1cadb5882c25fdcb2543f2a031224e3948daea