[Converter Runner] Support fractional units

BUG: 409216
FIXED-IN: 5.17.0

CHANGELOG: Converter runner can now convert fractional units, such as 3/8"

Differential Revision: https://phabricator.kde.org/D22869